movies_train.csv 파일 mysql에 저장

--- a/영화 관객수 예측 모델/20210919_데이터 저장_mysql 활용.ipynb
+++ b/영화 관객수 예측 모델/20210919_데이터 저장_mysql 활용.ipynb
@@ -94,10 +94,10 @@
    "outputs": [],
    "source": [
     "# mysql 연결\n",
-    "conn = pymysql.connect(host = '3.38.70.165', # DB IP (local에 접속하는 경우 : localhost)\n",
+    "conn = pymysql.connect(host = '', # DB IP (local에 접속하는 경우 : localhost)\n",
     "                     port = 3306, # 포트 번호\n",
-    "                     user = 'min',\n",
-    "                     passwd = 'yumin!', # mySQL 접속 계정 패스워드\n",
+    "                     user = '',\n",
+    "                     passwd = '', # mySQL 접속 계정 패스워드\n",
     "                     db = 'movie', # 데이터베이스명\n",
     "                     charset='utf8') # 한글 깨짐 방지"
    ]
@@ -469,7 +469,7 @@
     "import MySQLdb\n",
     "\n",
     "# create_engint(\"mysql+pymysql://사용자명:\"+\"패스워드\"+\"@IP 주소:포트번호/DB 이름?charset=utf8\", encoding ='utf-8')\n",
-    "engine = create_engine(\"mysql+pymysql://min:\"+\"yumin!\"+\"@3.38.70.165:3306/movie?charset=utf8\", encoding ='utf-8')"
+    "engine = create_engine(\"mysql+pymysql://:\"+\"\"+\"@:3306/movie?charset=utf8\", encoding ='utf-8')"
    ]
   },
   {
